--- a/src/history.html
+++ b/src/history.html
@@ -104,7 +104,7 @@
                 <a id="videotemplate" draggable="false" style="display:block;float:left;width:45%;height:155px;padding:0;margin-left:3.33%;margin-top:10px;
                         font-size:0;position:relative;cursor: pointer;display:none;text-decoration: blink;color:#000000;">
                     <div style="width:100%;height:109px;background-color: #dddddd;border: 1px solid #efefef;border-bottom:none;">
-                        <img class="cover" draggable="false" src="" style="width:100%;height:106px;object-fit: cover;"/>
+                        <video class="cover" draggable="false" src="" muted style="width:100%;height:106px;object-fit: cover;"></video>
                     </div>
                     <progress class="progress" style="width:100%;height:5px;position:absolute;top:105px;"></progress>
                     <div class="name ellipsis" style="width:100%;height:20px;background-color: #ffffff;font-size:13px;line-height:20px;
@@ -169,6 +169,17 @@
             getVideoList()
         }
 
+        function coverin1(item,ele){
+            if(nowvideoele == ele){
+                $(ele).find('.cover')[0].playbackRate=5
+            }else{
+                $(nowvideoele).find('.cover')[0].pause()
+                $(ele).find('.cover').attr('src',item.url)
+                $(ele).find('.cover')[0].playbackRate=5
+                $(ele).find('.cover')[0].play()
+            }
+
+        }
         function coverin(item,ele){
             var screenshots = item.screenshots
             screenshots = screenshots?JSON.parse(screenshots):null;
@@ -193,11 +204,23 @@
             },200)
         }
 
+        function coverout1(item,ele){
+            if(nowvideoele == ele){
+                $(ele).find('.cover')[0].playbackRate=1
+            }else{
+                $(nowvideoele).find('.cover')[0].play()
+                $(ele).find('.cover')[0].pause()
+                $(ele).find('.cover')[0].playbackRate=1
+                $(ele).find('.cover').attr('src',"")
+            }
+        }
         function coverout(item,ele){
             clearTimeout(ele.aaa)
             clearInterval(ele.sss)
             $(ele).find('.cover').attr('src',item.cover)
         }
+
+        var nowvideoele;
 
         function getVideoList(){
             let _this = this;
@@ -213,7 +236,7 @@
                 },
                 async: true,
                 success: function(res) {
-                    var activeindex = Math.round(Math.random()*3);
+                    var activeindex = Math.round(Math.random()*7);
                     if(res.data.rows.length>0){
                         page.historys.rows.push(...res.data.rows)
                         page.historys.currRows=res.data.rows
@@ -221,18 +244,20 @@
                     $(res.data.rows).each((inx,item)=>{
                         page.historys.map['videoNo'+item.videoNo]=item
                         var videoele = $('#videotemplate').clone(true)
-                        videoele.attr('videoNo','videoNo'+item.videoNo)
-                        videoele.find('.cover').attr('src',item.cover).hover(
+                        videoele.attr('id','video'+item.no)
+                        videoele.find('.cover').attr('poster',item.cover)
+                        videoele.find('.cover').attr('src',item.url)
+                        videoele.find('.cover').hover(
                             function(){
-                                coverin(item,videoele)
+                                coverin1(item,videoele)
                             },
                             function(){
-                                coverout(item,videoele)
+                                coverout1(item,videoele)
                             }
                         ).bind('touchstart',function(){
-                            coverin(item,videoele)
+                            coverin1(item,videoele)
                         }).bind('touchend',function(){
-                            coverout(item,videoele)
+                            coverout1(item,videoele)
                         })
                         videoele.find('.name').text(item.seriesChname || item.chname)
                         videoele.find('.author').text(item.nickname)
@@ -246,7 +271,10 @@
                         $('.videoList').append(videoele)
 
                         if(activeindex == inx){
-                            coverin(item,videoele)
+                            nowvideoele = videoele;
+                            videoele.find('.cover').attr('src',item.url)
+                            videoele.find('.cover')[0].playbackRate=1
+                            videoele.find('.cover')[0].play()
                         }
                     })
                 }
