--- a/src/index.html
+++ b/src/index.html
@@ -144,17 +144,21 @@
             
             <div id="chooseDifficultyPad" style="width:100%;height:50px;position:absolute;top:220px;background-color: rgba(245,245,245,0.6);display:none;">
                 <div style="height:30px;justify-content: space-around;align-items: center;display: flex;margin-top:5px;">
-                    <span class="e1 e" data=1 style="display:inline-block;font-size:15px;width:25%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                    <span class="e1 e" data=1 style="display:inline-block;font-size:15px;width:20%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
                         line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
                         简单
                     </span>
-                    <span class="e2 e" data=2 style="display:inline-block;font-size:15px;width:25%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                    <span class="e2 e" data=2 style="display:inline-block;font-size:15px;width:20%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
                         line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
                         一般
                     </span>
-                    <span class="e3 e" data=3 style="display:inline-block;font-size:15px;width:25%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                    <span class="e3 e" data=3 style="display:inline-block;font-size:15px;width:20%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
                         line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
                         有点难
+                    </span>
+                    <span class="e4 e" data=4 style="display:inline-block;font-size:15px;width:20%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                        line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
+                        字幕有错
                     </span>
                 </div>
             </div>
