--- a/src/history.html
+++ b/src/history.html
@@ -104,7 +104,7 @@
                 <a id="videotemplate" draggable="false" style="display:block;float:left;width:45%;height:155px;padding:0;margin-left:3.33%;margin-top:10px;
                         font-size:0;position:relative;cursor: pointer;display:none;text-decoration: blink;color:#000000;">
                     <div style="width:100%;height:109px;background-color: #dddddd;border: 1px solid #efefef;border-bottom:none;">
-                        <video class="cover" draggable="false" src="" muted style="width:100%;height:106px;object-fit: cover;"></video>
+                        <video x5-playsinline playsinline controls360=no webkit-playsinline class="cover" draggable="false" src="" muted style="width:100%;height:106px;object-fit: cover;"></video>
                     </div>
                     <progress class="progress" style="width:100%;height:5px;position:absolute;top:105px;"></progress>
                     <div class="name ellipsis" style="width:100%;height:20px;background-color: #ffffff;font-size:13px;line-height:20px;
