--- a/src/index.html
+++ b/src/index.html
@@ -306,7 +306,7 @@
                 <div id="zh_subtitles" class="unselectable" 
                     style="line-height: 30px;width: 100%;text-align: center;font-size: 18px;" >
                 </div>
-                <div id="chDialog" class="chDialog unselectable" style="width:100%;height:20px;font-size:12px;color:#dadada;text-align: center;padding:0 5px;overflow: hidden;
+                <div id="chDialog" class="chDialog unselectable ellipsis" style="width:100%;height:20px;font-size:12px;color:#dadada;text-align: center;padding:0 5px;overflow: hidden;
                             word-break: break-all;box-sizing: border-box;line-height: 20px;letter-spacing: 0.5px;">
                 </div>
             </div>
