--- a/src/wordbook.html
+++ b/src/wordbook.html
@@ -139,7 +139,7 @@
 
     <script>
         if(config.debug)
-            document.write(`<script src="./wordbook-post.js" type="application/javascript"><\/script>`);
+            document.write(`<script src="./wordbook.js" type="application/javascript"><\/script>`);
         else
             document.write(`<script src="./wordbook.min.js" type="application/javascript"><\/script>`);
 
