--- a/src/index.html
+++ b/src/index.html
@@ -837,8 +837,8 @@
                     <span class="baidu" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:33.3333333%;text-align: center;cursor: pointer;">
                         百度
                     </span>
-                    <span class="shopee" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:33.3333333%;text-align: center;cursor: pointer;">
-                        shopee
+                    <span class="aliexpress" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:33.3333333%;text-align: center;cursor: pointer;">
+                        全球速卖通
                     </span>
                 </div>
                 <iframe id="extendSearchFrame"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;"></iframe>
