--- a/src/wordbook.html
+++ b/src/wordbook.html
@@ -52,7 +52,7 @@
 
 
         <div id="title" style="max-width:800px;width:100%;height:35px;line-height:35px;text-align: center;font-size: 15px;border-top:1px solid #a0a0a0;
-            color:#cacaca;margin:auto;background-color: #272727;display:none;">
+            color:#cacaca;margin:auto;background-color: #272727;display:none;box-sizing: border-box;">
         </div>
         <div id="index" style="max-width:800px;height:calc(100% - 117px);margin: auto;position:relative;background-color: #272727;font-size:0;display: none;
             " >
@@ -64,7 +64,7 @@
                     <span class="phonetic ellipsis" style="height:28px;line-height:28px;width:30%;font-size:15px;display:inline-block;color:#ffffff;padding:0 2px 0 2px;
                         box-sizing: border-box;">
                     </span>
-                    <span class="translation ellipsis" style="height:28px;line-height:28px;width:calc(30% - 20px);font-size:15px;display:inline-block;color:#ffffff;padding:0 3px 0 2px;
+                    <span class="translation ellipsis" style="height:28px;line-height:28px;width:30% ;font-size:15px;display:inline-block;color:#ffffff;padding:0 3px 0 2px;
                         box-sizing: border-box;">
                     </span>
                 </div>
@@ -128,19 +128,27 @@
 
         <div id="extendSearchPad" style="width:100%;height:100%;position:absolute;top:0;background-color: rgba(0, 0, 0, 0.8);display:none;">
             <div style="height:40px;background-color:#ffffff;">
-                <span class="bing" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:33.3333333%;text-align: center;cursor: pointer;">
+                <span class="g ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
                     Bing
                 </span>
-                <span class="baidu" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:33.3333333%;text-align: center;cursor: pointer;">
+                <span class="g1 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
                     百度
                 </span>
-                <span class="aliexpress" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:33.3333333%;text-align: center;cursor: pointer;">
+                <span class="g2 ellipsis" style="font-size:14px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
                     全球速卖通
                 </span>
+                <span class="g3 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
+                    韦氏
+                </span>
+                <span class="g4 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
+                    有道
+                </span>
             </div>
-            <iframe id="extendSearchFrame"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;"></iframe>
-            <iframe id="extendSearchFrame1"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;"></iframe>
-            <iframe id="extendSearchFrame2"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;"></iframe>
+            <iframe id="extendSearchFrame"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
+            <iframe id="extendSearchFrame1"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
+            <iframe id="extendSearchFrame2"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
+            <iframe id="extendSearchFrame3"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
+            <iframe id="extendSearchFrame4"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
         </div>
     </body>
 
