--- a/src/my.html
+++ b/src/my.html
@@ -72,7 +72,7 @@
                     翌日更新
                 </div>
                 <div style="text-align: center;border:1px solid #868686;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;cursor: pointer;
-                        position:absolute;bottom:100px;left:50%;transform:translateX(-50%);color:#868686;display:none;"
+                        position:absolute;bottom:190px;left:50%;transform:translateX(-50%);color:#868686;"
                     onclick="
                         var r=confirm('确认重置吗?')
                         if(r){
@@ -81,7 +81,7 @@
                             location.replace('./index.html')
                         }
                     ">
-                    重 置
+                    清空缓存
                 </div>
 
 
