--- a/src/wordbook.html
+++ b/src/wordbook.html
@@ -91,7 +91,7 @@
         </div>
         <div id="goindexbtn" style="max-width:800px;width:100%;height:40px;line-height:40px;text-align: center;position:absolute;bottom:0;font-size: 15px;cursor: pointer;
             border-top:1px solid #565656;color:#cecece;left:50%;transform: translateX(-50%);display:none;">
-            返回主页
+            来创建自己的单词本吧
         </div>
 
 
@@ -129,19 +129,19 @@
         <div id="extendSearchPad" style="width:100%;height:100%;position:absolute;top:0;background-color: rgba(0, 0, 0, 0.8);display:none;">
             <div style="height:40px;background-color:#ffffff;">
                 <span class="g ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
-                    Bing
+                    有道
                 </span>
                 <span class="g1 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
-                    百度
+                    图片
                 </span>
-                <span class="g2 ellipsis" style="font-size:14px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
+                <span class="g2 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
+                    视频
+                </span>
+                <span class="g3 ellipsis" style="font-size:14px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
                     全球速卖通
                 </span>
-                <span class="g3 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
-                    韦氏
-                </span>
                 <span class="g4 ellipsis" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:20%;text-align: center;cursor: pointer;">
-                    有道
+                    资讯
                 </span>
             </div>
             <iframe id="extendSearchFrame"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;background: #ffffff;"></iframe>
