--- a/src/history2.html
+++ b/src/history2.html
@@ -303,8 +303,7 @@
 
         window.onbeforeunload=function(){
             console.log('onbeforeunload')
-            navigator.sendBeacon("/mumu/page-out");
-            log.flush()
+            //navigator.sendBeacon("/mumu/page-out");
         }
 
         var lastTouchEnd;
