--- a/src/my.html
+++ b/src/my.html
@@ -68,9 +68,9 @@
                         <span id="tm" style="height:5px;height:15px;line-height:15px;font-size:12px;vertical-align: middle;margin-left:5px;position: absolute;color:#898989;"></span>
                     </div>
                 </div>
-                <div style="width:100%;font-size:14px;height:30px;text-align: center;line-height: 30px;margin-top:100px;color:#919191;">
+                <!-- <div style="width:100%;font-size:14px;height:30px;text-align: center;line-height: 30px;margin-top:100px;color:#919191;">
                     翌日更新
-                </div>
+                </div> -->
                 <div style="text-align: center;border:1px solid #868686;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;cursor: pointer;
                         position:absolute;bottom:190px;left:50%;transform:translateX(-50%);color:#868686;"
                     onclick="
