--- a/public/video.html
+++ b/public/video.html
@@ -207,7 +207,7 @@
             <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
-                    onclick="$('#video')[0].pause();location.replace('index.html');">
+                    onclick="$('#video')[0].pause();location.replace('discover.html');">
                     发现
                 </span>
                 <span class="unselectable" 
